<resources>
    <string name="app_name">MTM(Raymond)</string>
    <string name="add_fabric_image">Add Fabric Image</string>
    <string name="or">-OR-</string>
    <string name="fabric_code">Fabric Code</string>
    <string name="fabric_code_again">Fabric Code Again</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="capture_image">Capture Image</string>
    <string name="capture_image_again">Capture Image Again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_fabric_information">Add New Fabric</string>
    <string name="rack_number">Rack Number</string>
    <string name="fabric_length">Fabric Length</string>
    <string name="fabric_width">Fabric Width</string>
    <string name="batch">Batch</string>
    <string name="file_number">File Number</string>
    <string name="view_modify_fabric_information">View/Modify Fabric Detail</string>
    <string name="add_view_fabric_label">{label}</string>
    <string name="qr_code_scanning">Qr Code Scanning</string>
    <string name="next">Next</string>
    <string name="select_a_fabric_from_the_list">Select a fabric from the list</string>
    <string name="wrong_qr_scanned">Wrong QR Scanned!</string>
    <string name="done">Done</string>

</resources>